The first korean translation draft

--- a/00-preface.tex
+++ b/00-preface.tex
@@ -1,119 +1,77 @@
 % The contents of this file is 
 % Copyright (c) 2009- Charles R. Severance, All Righs Reserved
 
-\chapter{Preface}
+\chapter{한국어판 서면}
 
-\section*{Python for Informatics: Remixing an Open Book}
+첫 인터넷 웹 브라우저를 만든 마크 앤더슨은 소프트웨어가 세상을 먹고 있다("Software is eating the world")는 자극적인 표현으로 2011년 월스트리트 저널에 에세이를 썼고, 카네기멜론 대학의 쟈넷 윙 교수는 이론적 사고(Theoretical Thinking), 실험적 사고(Experimental Thinking))와 더불어 정보적 사고(Computational Thinking)가 현재도 그렇지만 앞으로 인간의 사고를 지배하는 중추적인 역할을 할 것을 주장했다. 이들의 결과는 정보적 사고를 배운 사람과 소프트웨어를 이해하고 활용하는 사람과 그렇지 못한 사람과의 차이는 산업경제의 빈부격차보다 더 큰 디지털 경제의 정보 불평등(Digital Divide)를 야기할 것으로 예측했다.
 
-It is quite natural for academics who are continuously told to 
-``publish or perish'' to want to always create something from scratch
-that is their own fresh creation.   This book is an 
-experiment in not starting from scratch, but instead ``re-mixing''
-the book titled
-\emph{Think Python: How to Think Like
-a Computer Scientist}
-written by Allen B. Downey, Jeff Elkner and others.
+정부는  ’14년 7월 세계 경제, 사회 환경이 소프트웨어 중심사회로 급격히 변화하고 있으며, 소프트웨어가 혁신과 성장, 가치창출의 중심이 되고, 개인•기업•국가의 경쟁력을 좌우하는 중요한 역할을 하고 있음에도 불구하고, 우리나라는 범정부적, 국민적 관심이 미흡한 상황이라고 진단하고, 미국, 영국, 이스라엘 등 선진국과 마찬가지로, 초•중•고에서 소프트웨어를 필수로 이수할 수 있는 방안을 강구하고 있다.
 
-In December of 2009, I was preparing to teach
-{\bf SI502 - Networked Programming} at the University of Michigan
-for the fifth semester in a row and decided it was time
-to write a Python textbook that focused on exploring data
-instead of understanding algorithms and abstractions.
-My goal in SI502 is to teach people life-long data handling 
-skills using Python.  Few of my
-students were planning to be professional 
-computer programmers.  Instead, they
-planned be librarians, managers, lawyers, biologists, economists, etc. 
-who happened to want to skillfully use technology in their chosen field.
+하지만, 지금까지의 관심은 소프트웨어만 집중되어 왔고, 정보 및 데이터에 대한 부분은 상대적으로 소홀히 다뤄왔다. 
+''Python for Informatics'' 번역을 통해서 컴퓨터 언어를 쉽고 빠르게 그리고 정보 및 데이터에 대한 부분도 효과적으로 학습할 수 있을 것으로 기대한다.
 
-I never seemed to find the perfect data-oriented Python
-book for my course so I set out 
-to write just such a book.  Luckily at a faculty meeting three weeks
-before I was about to start my new book from scratch over 
-the holiday break, 
-Dr. Atul Prakash showed me the \emph{Think Python} book which he had
-used to teach his Python course that semester.  
-It is a well-written Computer Science text with a focus on 
-short, direct explanations and ease of learning.  
+이광춘 한정수 (xwmooc)\\
+http://www.xwmooc.net\\
+경기도 과천\\
+2014년 9월
 
-The overall book structure
-has been changed to get to doing data analysis problems as quickly as
-possible and have a series of running examples and exercises 
-about data analysis from the very beginning.  
+\chapter{서면}
 
-The chapters 2-10 are similar to the \emph{Think Python} book
-but there have been major changes. Number-oriented examples and
-exercises have been replaced with data-oriented exercises.
-Topics are presented in the order needed to build increasingly
-sophisticated data analysis solutions. Some topics like {\tt try} and
-{\tt except} are pulled forward and presented as part of the chapter
-on conditionals.  Functions are given very light treatment until 
-they are needed to handle program complexity rather introduced 
-as an early lesson in abstraction.  Nearly all user-defined functions
-have been removed from the example code and exercises outside Chapter 4.
-The word ``recursion''\footnote{Except of course for this line.}
-does not appear in the book at all.
+\section*{정보교육을 위한 파이썬: 공개된 책 리믹싱}
+''출판 혹은 소멸(publish or perish)''를 들어온 학자는 자신만의 신선한 창조로 무에서 만들어내는 것은 무척이나 자연스럽다.
+이책은 아무 것도 없는 것에서 시작하는 대신에 Allen B. Downey, Jeff Elkner와 협력자들이 저작한 \emph{Think Python: How to Think Like
+a Computer Scientist} 책을 ''리믹싱(re-mixing)''하는 실험이다.
 
-In chapters 1 and 11-16, all of the material is brand new, focusing
-on real-world uses and simple examples of Python for data analysis 
-including regular expressions for searching and parsing, 
-automating tasks on your computer, retrieving data across 
-the network, scraping web pages for data, 
-using web services, parsing XML and JSON data, and creating 
-and using databases using Structured Query Language.
+2009년 12월, 미시건 대학에서 연속해서 5 학기 {\bf SI502 - Networked Programming}을 준비중이었고,
+알고리즘과 추상화를 이해하는 대신에 데이터 탐색에 집중하는 파이썬 교과서를 쓸 시점이라고 정했다.
+SI502 목표는 파이썬을 사용하여 사람들에게 평생 데이터를 다루는 기술을 가르치는 것이다.
+대신에, 핵생들 중 누구도 전문적인 컴퓨터 프로그래머를 계획한 사람은 없었다.
+대신에 학생들은 도서관원, 관리자, 변호사, 생물학자, 경제학자가 되고자 했는데 자신만의 영역에서 능숙하게 기술을 사용하고자 했다.
 
-The ultimate goal of all of these changes is a shift from a 
-Computer Science to an Informatics
-focus is to only include topics into a first technology 
-class that can be useful even if one chooses not to 
-become a professional programmer.
+수업을 위해서 결코 완벽한 데이터 지향 파이썬 책을 발견할 것 같지 않아서 그런 책을 저작하려고 시작했다.
+휴가 기간동안 아무것도 없는 상태에서 새로운 책을 시작하기 3주전 다행스럽게도 교수 회의에서, Atul Prakash 박사가
+지난 학기 파이썬 과정을 가르치는데 사용한 \emph{Think Python} 책을 보여주었다.
+간결하고 직접적인 설명에 학습하기 쉬운 것에 초점을 맞춘 잘 쓰여진 컴퓨터 과학 교과서였다.
 
-Students who find this book interesting and want to further explore
-should look at Allen B. Downey's \emph{Think Python} book.  Because there
-is a lot of overlap between the two books,
-students will quickly pick up skills in the additional
-areas of technical programming and algorithmic thinking 
-that are covered in \emph{Think Python}.
-And given that the books have a similar writing style, you should be 
-able to move quickly through \emph{Think Python} with a minimum of effort.
+전반적인 책의 구조는 가능한 빠르게 데이터 분석 문제를 다루고, 처음부터 데이터분석에 관한 실전 예제와 연습문제로 바꾸었다.
+
+2-10 장은 \emph{Think Python} 책과 매우 유사하지만 주요 변경사항이 있다.
+숫자 중심의 예제와 연습문제는 데이터 지향 연습으로 대체했다.
+주제는 순차적으로 제시되어서 점차적으로 정교한 데이터 분석 솔류션을 구축하도록 했다.
+{\tt try}, {\tt except} 같은 주제는 앞으로 가져와서 조건문 장의 일부에 제시했다.
+함수는 추상화의 첫 수업에 소개되기 보다는 프로그램 복잡성을 다루는데 필요할 때까지 매우 가볍게 다루었다.
+거의 모든 사용자 정의 함수는 4장 밖으로 예제 코드와 연습문제를 제거했다.
+단어 ``재귀(recursion)''\footnote{물론 이번 줄은 제외다.}는 책의 어디에도 나타나지 않는다.
+
+1장, 11-16장의 모든 콘텐츠는 완전히 새로운 실무 사용과 데이터 분석을 위한 파이썬 간단한 예제에 집중했다.
+데이터 분석은 검색과 파싱를 위한 정규 표현식, 사용자 컴퓨터의 작업 자동화, 네트워크 상에서 데이터 가져오기,
+데이터로 웹페이지 스크랩핑, 웹서비스 사용하기, XML과 JSON 데이터 파싱, 그리고 SQL(Structured Query Language)을 사용한
+데이터베이스 생성 및 사용을 포함한다.
+
+이 모든 변화의 궁극적인 목적은 컴퓨터 과학에서 인포매틱스(informatics)로 전환이고, 설사 전문적인 프로그래머가 되지 않을 지라도
+유용한 첫 기술 과목안으로 의제를 포괄하는 것이다.
+
+이책이 흥미롭고 좀더 탐색하고자 하는 학생은 Allen B. Downey 의 \emph{Think Python} 책을 봐야한다.
+두 책간에 많이 겹치는 부분이 있어서, \emph{Think Python}에서 다루는 기술적인 프로그래밍과 알고리즘적 사고에 대한 기술을 빠르게 습득할 것이다.
+그리고, 책의 저작 스타일 매우 유사해서, 최소의 노력으로 \emph{Think Python}을 통해서 빠르게 나아갈 수 있다.
 
 \index{Creative Commons License}
 \index{CC-BY-SA}
 \index{BY-SA}
-As the copyright holder of \emph{Think Python},
-Allen has given me permission to change the book's license 
-on the material from his book that remains in this book
-from the
-GNU Free Documentation License 
-to the more recent
-Creative Commons Attribution --- Share Alike
-license.
-This follows a general shift in open documentation licenses moving 
-from the GFDL to the CC-BY-SA (i.e. Wikipedia).
-Using the CC-BY-SA license maintains the book's 
-strong copyleft tradition while making it even more straightforward 
-for new authors to reuse this material as they see fit.
 
-I feel that this book serves an example of why open 
-materials are so important to the future of education,
-and want to thank Allen B. Downey and Cambridge University
-Press for their forward looking decision to make the book available
-under an open Copyright.   I hope they are pleased with the 
-results of my efforts and I hope that you the reader are pleased with
-\emph{our} collective efforts.
+\emph{Think Python} 저작권자로서, Allen은 GNU 공개 문서 라이센스가 적용된 본인의 책에서 이 책에 적용된 좀더 최근의 크리에이티브 커먼즈 저작자 명시, 동일한 라이선스 적용(CC-BY-SA)변경하도록 허가를 주었다. 
+공개 문서 라이센스가 GFDL에서 CC-BY-SA(예, 위키피디아) 바뀌는 추세를 따르는 것이다.
+CC-BY-SA 라이선스를 사용하는 것은 책에 대한 강력한 카피레프트 전통을 유지하면서, 새로운 저자가 재사용해서 자신의 목적에 맞춰 사용하도록 좀더 직접적으로 만드는 것이다.
+이 책이 왜 공개 저작물이 미래 교육에 매우 중요하다고 느끼고, 책을 공개 저작권 아래에서 이용가능하게 만든 앞을 내다보는 결정을 내린 Allen B. Downey와 Cambridge University Press에 감사드린다. 저자 노력의 결과에 기뻐하고, 독자는 \emph{모두의} 공동 노력에 즐거워하길 희망한다.
 
-I would like to thank Allen B. Downey and Lauren Cowles for their help,
-patience, and guidance in dealing with and resolving the copyright 
-issues around this book.
+이 책과 관련된 저작권 이슈를 해결하고 처리하는데 인내를 가지고 도움과 안내를 주신 Allen B. Downey와 Lauren Cowles 분께 감사를 표한다.
 
 Charles Severance\\
 www.dr-chuck.com\\
 Ann Arbor, MI, USA\\
-September 9, 2013
+2013년 9월 9일
 
-Charles Severance is a 
-Clinical Associate Professor 
-at the University of Michigan School of Information.
+Charles Severance는 미시건 대학 정보 학교 부교수다.
 
 \clearemptydoublepage
 
