--- a/AC-contrib.tex
+++ b/AC-contrib.tex
@@ -1,10 +1,10 @@
 % The contents of this file is 
 % Copyright (c) 2009-  Charles R. Severance, All Righs Reserved
 
-\chapter{Contributions}
-\section*{Contributor List for ``Python for Informatics''}
+\chapter{공헌(contribution)}
+\section*{''정보교육을 위한 파이썬''에 공헌하신 분 목록}
 
-Bruce Shields for copy editing early drafts,
+Bruce Shields 초기 초안을 편집,
 Sarah Hegge,
 Steven Cherry,
 Sarah Kathleen Barbarow,
@@ -42,153 +42,101 @@ Hedemarrie Dussan,
 
 % CONTRIB
 
-\section*{Preface for ``Think Python''}
+\section*{``Think Python'' 서문}
 
-\subsection*{The strange history of ``Think Python''}
+\subsection*{``Think Python'' 특이한 역사}
 
 (Allen B. Downey)
 
-In January 1999 I was preparing to teach an introductory programming
-class in Java.  I had taught it three times and I was getting
-frustrated.  The failure rate in the class was too high and, even for
-students who succeeded, the overall level of achievement was too low.
+1999년 1월 자바로 프로그램 기초 과목 수업을 준비하고 있었다.
+세번에 걸쳐서 수업을 했지만 좌절하고 있었다.
+학급에서 낙제비율이 무척이나 높았고, 정상적으로 이수한 학생의 전반적인 성취도가 무척 낮았다.
 
-One of the problems I saw was the books.  
-They were too big, with too much unnecessary detail about Java, and
-not enough high-level guidance about how to program.  And they all
-suffered from the trap door effect: they would start out easy,
-proceed gradually, and then somewhere around Chapter 5 the bottom would
-fall out.  The students would get too much new material, too fast,
-and I would spend the rest of the semester picking up the pieces.
+목격한 여러 문제점 중의 하는 책이다.
+자바 책이 너무 방대하고 불필요하게 상세한 정보가 너무 많았고 어떻게 프로그램을 작성하는지에 대한
+높은 수준의 지침은 부족했다.
+학생들 모두 뚜껑문 효과(trapdoor effect)로 고생했다. 즉, 쉽게 시작하고, 점진적으로 나아가지고나서 5장 주변에 
+하위권 학생이 떨어져 나가는 것이다. 너무 많은 새로운 교재를 너무 빨리 학습해야했고,
+저자는 학기의 나머지를 수습하는데 사용했다.
 
-Two weeks before the first day of classes, I decided to write my
-own book.  
-My goals were:
+첫 수업시작하기 2주일 전에 직접 책을 쓰기로 마음먹었다.
+목표는 다음과 같다.
 
 \begin{itemize}
 
-\item Keep it short.  It is better for students to read 10 pages
-than not read 50 pages.
+\item 짧게 한다. 읽지 않는 50 페이지보다 읽히는 10 페이지가 더 낫다.
 
-\item Be careful with vocabulary.  I tried to minimize the jargon
-and define each term at first use.
+\item 용어에 주의한다. 전문용어를 최소하하고 첫번째 사용에 각 용어를 정의한다.
 
-\item Build gradually. To avoid trap doors, I took the most difficult
-topics and split them into a series of small steps. 
+\item 점진적으로 구축해 나간다. 뚜껑문 효과를 피하기 위해서, 가장 어려운 주제를 잡고 일련의 작은 단계로 쪼갠다.
 
-\item Focus on programming, not the programming language.  I included
-the minimum useful subset of Java and left out the rest.
+\item 프로그래밍 언어보다 프로그래밍에 집중한다. 최소한의 유용한 자바 부분을 포함하고 나머지는 생략한다.
 
 \end{itemize}
 
-I needed a title, so on a whim I chose \emph{How to Think Like
-a Computer Scientist}.
+제목이 필요했고, 즉흥적으로 \emph{어떻게 컴퓨터 과학자처럼 생각하기 (How to Think Like a Computer Scientist)}로 정했다.
 
-My first version was rough, but it worked.  Students did the reading,
-and they understood enough that I could spend class time on the hard
-topics, the interesting topics and (most important) letting the
-students practice.
+첫 버젼은 엉성했지만 실질적으로 작동했다. 학생들은 읽고, 충분히 이해해서 수업시간을 어렵고, 흥미로운 주제에 좀더 시간을 쓸 수 있었고,
+가장 중요한 것은 학생들이 실습을 하게된 것이다.
 
-I released the book under the GNU Free Documentation License,
-which allows users to copy, modify, and distribute the book.
+GNU 공개 문서 라이센스(GNU Free Documentation License)로 책을 배포해서 누구나 복사, 편집, 배포할 수 있게 했다.
 
 \index{GNU Free Documentation License}
 \index{Free Documentation License, GNU}
 
-What happened next is the cool part.  Jeff Elkner, a high school
-teacher in Virginia, adopted my book and translated it into
-Python.  He sent me a copy of his translation, and I had the
-unusual experience of learning Python by reading my own book.
+다음에 멋진 일이 생겼다. 버지니아 고등학교 교사인 Jeff Elkner 선생님이 책을 채용해서 파이썬으로 번역했다.
+Jeff Elkner 선생님은 번역본을 보내왔고, 책을 읽고서 파이썬을 공부하게 되는 좀 특이한 경험을 했다.
 
-Jeff and I revised the book, incorporated a case study by
-Chris Meyers, and in 2001 we released \emph{How to Think Like
-a Computer Scientist: Learning with Python}, also under
-the GNU Free Documentation License.
-As Green Tea Press, I published the book and started selling
-hard copies through Amazon.com and college book stores.
-Other books from Green Tea Press are available at
-\url{greenteapress.com}.
+Jeff와 저자는 책을 개작했고 Chris Meyers가 사례 연구를 추가했다. 2001년 GNU 공개 문서 라이센스로 
+\emph{How to Think Like a Computer Scientist: Learning with Python} 제목으로 배포했다.
+Green Tea Press 출판사에서 책을 출판해서 Amazon.com과 대학 서점을 통해서 제본된 책을 팔기 시작했다.
+Green Tea Press 출판사의 다른 책들은 \url{greenteapress.com}에서 살펴볼 수 있다.
 
-In 2003 I started teaching at Olin College and I got to teach
-Python for the first time.  The contrast with Java was striking.
-Students struggled less, learned more, worked on more interesting
-projects, and generally had a lot more fun.
+2003년 Olin College에서 수업을 시작해서 처음으로 파이썬을 가르치게 되었다.
+자바와 비교하여 놀라웠다. 학생들이 덜 고생하고, 더 많이 배우고, 좀더 흥미로운 프로젝트를 수행하고, 전반적으로 훨씬 재미있게 되었다.
 
-Over the last five years I have continued to develop the book,
-correcting errors, improving some of the examples and
-adding material, especially exercises.  In 2008 I started work
-on a major revision---at the same time, I was
-contacted by an editor at Cambridge University Press who
-was interested in publishing the next edition.  Good timing!
+지난 5년 동안 책을 계속적으로 개발하고, 오류를 수정하고, 예제을 향상하고, 교재, 특히 연습문제를 추가했다.
+2008년 대대적인 수정 작업을 시작했는데 동시에 차기 개정판에 관심을 보인 Cambridge University Press 편집자와 계약했다. 좋은 시점이다.
 
-I hope you enjoy working with this book, and that it helps
-you learn to program and think, at least a little bit, like
-a computer scientist.
+이 책을 즐기고, 컴퓨터 과학자처럼 적어도 약간은 프로그램하고 생각하는 것을 배우는데 도움이 되기를 바랍니다.
 
-\subsection*{Acknowledgements for ``Think Python''}
+\subsection*{``Think Python'' 감사의 글}
 
 (Allen B. Downey)
+처음으로 가장 중요하게, Jeff Elkner에게 감사드린다. 자바 책을 파이썬으로 번역해서
+이 프로젝트가 시작되게 했고 가장 좋아하는 언어가 된 파이썬을 소개해 주었다.
 
-First and most importantly, I thank Jeff Elkner, who
-translated my Java book into Python, which got this project
-started and introduced me to what has turned out to be my
-favorite language.
+Chris Meyers에게도 감사의 말씀을 드린다. \emph{How to Think Like a Computer Scientist} 책의 몇개 부분에 기여해 주셨다.
 
-I also thank Chris Meyers, who contributed several sections
-to \emph{How to Think Like a Computer Scientist}.
-
-And I thank the Free Software Foundation for developing
-the GNU Free Documentation License, which helped make
-my collaboration with Jeff and Chris possible.
+Jeff와 Chris와 협동작업을 할수 있게 만든 GNU 공개 문서 라이센스를 개발한 
+자유 소프트웨어 재단(Free Software Foundation)에 감사한다.
 
 \index{GNU Free Documentation License}
 \index{Free Documentation License, GNU}
 
-I also thank the editors at Lulu who worked on
-\emph{How to Think Like a Computer Scientist}.
+또한, \emph{How to Think Like a Computer Scientist} 책을 작업하신 Lulu의 편집자에게 감사한다.
 
-I thank all the students who worked with earlier
-versions of this book and all the contributors (listed
-in an Appendix) who sent in corrections and suggestions.
+책의 초기 버젼을 함께 작업한 모든 학생들과 수정과 제안을 보내주신 부론에 나온 모든 기여자에게 감사한다.
 
-And I thank my wife, Lisa, for her work on this book, and Green
-Tea Press, and everything else, too.
+그리고, 집사람 Lisa, Green Tea Press 그리고 다른 모든 것에도 감사한다.
 
 Allen B. Downey \\
 Needham MA\\
 
-Allen Downey is an Associate Professor of Computer Science at 
-the Franklin W. Olin College of Engineering.
+Allen Downey 
+컴퓨터 과학 부교수
+Franklin W. Olin College of Engineering
 
-
-\clearemptydoublepage
-
-% TABLE OF CONTENTS
-\begin{latexonly}
-
-\tableofcontents
-
-\clearemptydoublepage
-
-\end{latexonly}
-
-% START THE BOOK
-\mainmatter
-
-
-\section*{Contributor List for ``Think Python''}
+\section*{``Think Python'' 공헌자 목록}
 
 \index{contributors}
 
 (Allen B. Downey)
 
-More than 100 sharp-eyed and thoughtful readers have sent in
-suggestions and corrections over the past few years.  Their
-contributions, and enthusiasm for this project, have been a
-huge help.
+날카로운 눈과 사려깊은 100명 이상의 독자가 지난 몇년동안 수정사항과 제안을 보내주었다.
+이 프로젝트의 공헌과 열정은 매우 큰 도움이었다.
 
-For the detail on the nature of each of the contributions from
-these individuals, see the ``Think Python'' text.
+이들 참여자로부터의 각각의 공헌의 본질에 대한 자세한 사항은 ``Think Python'' 본문에서 확인하세요.
 
 Lloyd Hugh Allen,
 Yvon Boulianne,
