--- a/AD-copyright.tex
+++ b/AD-copyright.tex
@@ -1,62 +1,37 @@
 % The contents of this file is 
 % Copyright (c) 2009-  Charles R. Severance, All Righs Reserved
 
-\chapter{Copyright Detail}
+\chapter{저작권 세부정보}
 
-This work is licensed under a 
-Creative Common
-Attribution-NonCommercial-ShareAlike 3.0 Unported License.
-This license is 
-available at
-\url{creativecommons.org/licenses/by-nc-sa/3.0/}.  
+이 책은 크리에이티브 커먼즈 라이선스 3.0 (Creative Commons Attribution-NonCommercial-Share Alike 3.0)으로 인가되었다.
+라이선스의 자세한 사항은 \url{creativecommons.org/licenses/by-nc-sa/3.0/}에 기재되어 있다.
 
-I would have preferred to license the book under the less 
-restrictive CC-BY-SA license.   But unfortunately there are
-a few unscrupulous
-organizations who search for and find freely licensed books,
-and then publish and sell virtually unchanged copies of the books on a 
-print on demand service such as LuLu or CreateSpace.  CreateSpace
-has (thankfully) added a policy that gives the wishes of the actual 
-copyright holder preference over a non-copyright holder attempting 
-to publish a freely licensed work.  Unfortunately there are many 
-print-on-demand services and very few have as well-considered a policy 
-as CreateSpace.
+책을 좀더 제약이 덜한 CC-BY-SA 라이선스로 인가하고자 했다. 하지만 불행하게도 몇몇 비양심적인 조직은
+자유로이 인가된 책을 탐색하고, 찾아서 LuLu 나 CreateSpace 같은 POD(print-on-demand) 서비스로 사실상 변경없이 책을 출판하고 판매하려 했다.
+고맙게도 CreateSpace에서 자유로이 인가된 저작물을 출판하려는 비저작권자에 대해서 실질적 저작권자에게 우선권을 주는 정책을 추가했다.
+불행하게도 많은 POD(print-on-demand) 서비스가 있고 매우 적은 기관만이 CreateSpace같은 사려 깊은 정책을 가지고 있다.
 
-Regretfully, I added the NC element to the license
-this book to give me recourse in case someone tries to clone this 
-book and sell it commercially.   Unfortunately, adding NC limits uses
-of this material that I would like to permit.  So I have added this 
-section of the document to describe specific situations where 
-I am giving my permission in advance to use the material in this book
-in situations that some might consider commercial.
+유감스럽게도, 이 책을 복제하고 상업적으로 팔려는 사람이 있는 경우에 대비해서 구상청구권으로 NC 요소를 라이센스에 추가했다.
+불행하게도 NC를 추가하는 것은 저자가 허가하고자 하는 이 교재의 사용을 제한한다.
+그래서 상업적인 부분을 생각하는 사람을 위한 상황에서 이 책의 내용을 어떻게 사용하는지를 미리 사용허가를 주는
+특별한 상황을 기술하기 위해서 이 문서에 섹션을 추가했다.
 
 \begin{itemize}
-\item If you are printing a limited number of copies of all or part of 
-this book for use in a course (e.g. like a coursepack), then 
-you are granted CC-BY license to these materials for that purpose.
+\item 학습에 사용될 목적으로 전부 혹은 책의 일부를 제한된 숫자로 책을 출력한다면, 이 목적으로 CC-BY 라이센스로 사용가능하다.
 
-\item If you are a teacher at a university and you translate this book 
-into a language other than English and teach using the translated book, then 
-you can contact me and I will granted you a CC-BY-SA 
-license to these materials with respect to the publication of your 
-translation. In particular you will be permitted 
-to sell the resulting translated book commercially.  
+\item 대학교의 선생님이고, 영어가 아닌 다른 언어로 이 책을 번역하고 번역된 책으로 수업을 한다면,
+저자와 연락하고 CC-BY-SA 라이센스로 번역의 출판에 허용된다. 특히, 상업적으로 번역된 책을 판매하도록 허락된다.
 \end{itemize}
 
-If you are intending to translate the book, you may want to contact me
-so we can make sure that you have all of the related course materials so 
-you can translate them as well.
-
-Of course, you are welcome to contact me and ask for permission if these
-clauses are not sufficient.  In all cases, permission to reuse and
-remix this material will be granted as long as there is clear added value
-or benefit to students or teachers that will accrue as a result of the 
-new work.
+만약 책을 번역하고자 한다면, 저자와 연락해서 관련된 수업 교재를 가지고 번역할 수 있도록 확인하세요.
+물론, 이들 조항이 충분하지 않다면 연락을 환영하고 승인을 요청할 수 있다. 
+모든 경우에 명확히 추가로 가치가 있고 새로운 저작의 결과로 생기는 효익이 학생이나 선생님에게 있기만 하면
+이 교재를 재사용하고 믹싱하는 승인은 주어질 것이다.
 
 Charles Severance\\
 www.dr-chuck.com\\
 Ann Arbor, MI, USA\\
-September 9, 2013
+2013년 9월 9일
 
 
 
