--- a/AB-apple.tex
+++ b/AB-apple.tex
@@ -1,33 +1,25 @@
 % The contents of this file is 
 % Copyright (c) 2009-  Charles R. Severance, All Righs Reserved
 
-\chapter{Python Programming on Macintosh}
+\chapter{매킨토쉬 상에서 파이썬 프로그래밍}
 
-In this appendix, we walk through a series of steps
-so you can run Python on Macintosh.  Since Python is
-already included in the Macintosh Operating system, we need to 
-learn how to edit Python files and run Python programs
-in the terminal window.
+이번 부록에서 일련의 단계를 거쳐서 매킨토쉬상에서 파이썬을 실행한다.
+파이썬이 이미 매킨토쉬 운영시스템에 포함되어 있어서,
+어떻게 파이썬 파일을 편집하는지와 터미널 윈도우에서 파이썬 프로그램을 실행하는 것을 학습할 필요가 있다.
 
-There approaches you can take to editing and running
-Python programs, and this is just one
-approach we have found to be very simple.
+파이썬 프로그램을 편집하고 실행하는데 취할 수 있는 서로 다른 많은 접근방법이 있다. 이것은 간단한 접근 방법중의 하나다.
 
-First, you need to install a programmer editor.  You
-do not want to use TextEdit or Microsoft Word to edit
-Python programs.  Programs must be in "flat-text" files
-and so you need an editor that is good at
-editing text files.
+먼저, 프로그래머 편집기를 설치할 필요가 있다.
+Notepad나 윈도우 워드를 가지고 파이썬 프로그램을 편집할 필요는 없다.
+프로그램은 ''일반 텍스트(flat-text)'' 파일이여서 텍스트 파일을 편집하는데 좋은 에디터만 필요하다.
 
-Our recommended editor for Macintosh is TextWrangler which
-can be downloaded and installed from:
+매킨토쉬 시스템에 추천하고 싶은 편집기는 다음에서 다운받아 설치할 수 있는 TextWrangler다.
 
 \url{http://www.barebones.com/products/TextWrangler/}
 
-To create a Python program, run from 
-{\bf TextWrangler} from your {\bf Applications} folder.
+파이썬 프로그램을 생성하기 위해서 {\bf Applications} 폴더 {\bf TextWrangler}를 실행한다.
 
-Lets make our first Python program be:
+첫 파이썬 프로그램을 다음과 같이 작성한다.
 
 \beforeverb
 \begin{verbatim}
@@ -35,20 +27,21 @@ print 'Hello Chuck'
 \end{verbatim}
 \afterverb
 %
-Except that you should change it to be your name.  
-Lets save the file in a folder on your Desktop named 
-{\tt py4inf}.  It is best to keep your folder names short
-and not to have any spaces in your folder or file name.
-Once you have made the folder, save the file 
-into {\tt Desktop{\textbackslash}py4inf{\textbackslash}prog1.py}.
 
-The run the {\bf Terminal} program.  The easiest way is to 
-press the Spotlight icon (the magnifying glass) in the upper
-right of your screen and enter ``terminal'' and launch the
-application that comes up.
 
-You start in your ``home directory''.  You can see the current 
-directory by typing the {\tt pwd} command in the terminal window.
+여러분의 이름으로 바꾸는 것을 제외하고, 파일을 
+
+
+{\tt 바탕화면{\textbackslash}py4inf{\textbackslash}prog1.py}에 저장한다.
+
+명령-줄(command line) 실행은 윈도우 버젼마다 다른다. {\tt py4inf}로 데스크탑(Desktop) 폴더에 파일을 저장한다.
+폴더명을 짧게 하고 폴더명과 파일명에 어떤 공백도 넣지 않는 것이 좋다.
+폴더를 만들고 파일을 {\tt Desktop{\textbackslash}py4inf{\textbackslash}prog1.py} 으로 저장한다.
+
+{\bf 터미널(Terminal)} 프로그램을 실행. 가장 쉬운 방법은 화면 우측 상단의 Spotlight 아이콘(돋보기)를 누르고,
+''terminal'' 엔터치고 응용프로그램을 실행한다.
+
+''홈 디렉토리''에서 시작한다. 터미널 윈도우에서 {\tt pwd} 명령어를 타이핑해서 현재 디렉토리를 확인한다.
 
 \beforeverb
 \begin{verbatim}
@@ -58,10 +51,9 @@ directory by typing the {\tt pwd} command in the terminal window.
 \end{verbatim}
 \afterverb
 %
-We must be in the folder that contains your Python program 
-to run the program.  We user the {\tt cd} command to move to a new 
-folder and then the {\tt ls} command to list the files in the 
-folder.
+
+프로그램을 실행하기 위해서 파이썬 프로그램을 담고 있는 폴더에 있어야 한다.
+{\tt cd} 명령어를 사용해서 새 폴더로 이동하고 {\tt ls} 명령어로 폴더의 파일 목록을 화면에 출력한다.
 
 \beforeverb
 \begin{verbatim}
@@ -73,9 +65,8 @@ prog1.py
 \end{verbatim}
 \afterverb
 %
-To run your program, simply type the {\tt python} command followed
-by the name of your file at the 
-command prompt and press enter.
+
+프로그램을 실행하기 위해서, 단순히 명령 프롬프트에서 {\tt python} 명령어와 파일 이름을 타이핑하고 엔터를 친다.
 
 \beforeverb
 \begin{verbatim}
@@ -85,21 +76,15 @@ Hello Chuck
 \end{verbatim}
 \afterverb
 %
-You can edit the file in TextWrangler, save it and then switch back
-to the command line and execute the program again by typing
-the file name again at the command line prompt.
 
-If you get confused in the command line window - just close it
-and start a new one.
+TextWrangler에서 파일을 편집하고, 저장하고, 명령줄로 돌아온다.
+다시 명령줄 프롬프트에서 파일명을 타이핑해서 프로그램을 실행한다.
 
-Hint: You can also press the ``up-arrow'' in the command line to 
-scroll back and run a previously entered command again.
+만약 명령줄 윈도우에서 혼동이 생기면, 단순하게 닫고 새로 시작한다.
 
-You should also look in the preferences for TextWrangler and set it 
-to expand tab characters to be four spaces.  It will save you lots
-of effort looking for indentation errors.
+힌트: 스크롤 백해서 이전에 입력한 명령을 다시 실행하기 위해서 ''위쪽 화살표''를 명령줄에서 누른다.
 
-You can also find further information on editing and running 
-Python programs at \url{www.py4inf.com}.
+TextWrangler에서 환경설정 선호(preference)를 살펴보고 탭 문자가 공백 4개로 되도록 설정한다.
+이 단순한 설정이 들여쓰기 오류를 찾는 수고를 많이 경감시켜 준다.
 
-
+\url{www.py4inf.com}에서 파이썬 프로그램을 편집하고 실행하는 좀더 많은 정보를 얻을 수 있다.
