--- a/book_kor_AB.tex
+++ b/book_kor_AB.tex
@@ -29,34 +29,34 @@
 \frontmatter
 
 \input{00-cover}
-\input{00-preface}
+%\input{00-preface}
 
 % START THE BOOK
 \mainmatter
 
-\input{01-intro}
-\input{02-variables.tex}
-\input{03-conditional.tex}
-\input{04-functions.tex}
-\input{05-iterations.tex}
-\input{06-strings.tex}
-\input{07-files.tex}
-\input{08-lists.tex}
-\input{09-dictionaries.tex}
-\input{10-tuples.tex}
-\input{11-regex}
-\input{12-network}
-\input{13-web}
-\input{14-database}
-\input{15-viz}
-\input{16-tasks}
+%\input{01-intro}
+%\input{02-variables.tex}
+%\input{03-conditional.tex}
+%\input{04-functions.tex}
+%\input{05-iterations.tex}
+%\input{06-strings.tex}
+%\input{07-files.tex}
+%\input{08-lists.tex}
+%\input{09-dictionaries.tex}
+%\input{10-tuples.tex}
+%\input{11-regex}
+%\input{12-network}
+%\input{13-web}
+%\input{14-database}
+%\input{15-viz}
+%\input{16-tasks}
 
 \appendix
 
-\input{AA-windows}
+%\input{AA-windows}
 \input{AB-apple}
-\input{AC-contrib}
-\input{AD-copyright}
+%\input{AC-contrib}
+%\input{AD-copyright}
 
 \normalsize
 
