--- a/11-regex.tex
+++ b/11-regex.tex
@@ -472,10 +472,10 @@ Applies to the immediately preceding character and indicates to match zero or mo
 Applies to the immediately preceding character and indicates to match zero or more of the preceding character in ``non-greedy mode''.
 
 + \newline
-Applies to the immediately preceding character and indicates to match zero or more of the preceding character.
+Applies to the immediately preceding character and indicates to match one or more of the preceding character.
 
 +? \newline
-Applies to the immediately preceding character and indicates to match zero or more of the preceding character in ``non-greedy mode''.
+Applies to the immediately preceding character and indicates to match one or more of the preceding character in ``non-greedy mode''.
 
 [aeiou] \newline
 Matches a single character as long as that character is in the specified set.  In this example, it would match ``a'', ``e'', ``i'', ``o'' or ``u'' but no other characters.
