--- a/11-regex.tex
+++ b/11-regex.tex
@@ -35,7 +35,7 @@ We open the file, loop through each line and use the regular expression {\tt sea
 
 The power of the regular expressions comes when we add to special characters to the search string that allow us to more precisely control which lines match the string.  Adding these special characters to our regular expression allow us to do sophisticated matching and extraction while writing very little code.
 
-For example, the caret character is uses in regular 
+For example, the caret character is used in regular 
 expressions to match ``the beginning'' of a line.
 We could change our application to only match 
 lines where ``From:'' was at the beginning of the line as follows:
