Typo from Kindle

--- a/01-intro.tex
+++ b/01-intro.tex
@@ -248,7 +248,7 @@ might suggest that the language between humans and cats has no
 reserved words\footnote{\url{http://xkcd.com/231/}}.
 
 The reserved words in the language where humans talk to 
-Python incudes the following:
+Python includes the following:
 
 \beforeverb
 \begin{verbatim}
