--- a/11-regex.tex
+++ b/11-regex.tex
@@ -250,7 +250,7 @@ X-DSPAM-Probability: 0.0000
 \end{verbatim}
 \afterverb
 %
-We don't just want any floating point numbers from any lines.  We only to extract numbers from lines that have the above syntax.
+We don't just want any floating point numbers from any lines.  We only want to extract numbers from lines that have the above syntax.
 
 We can construct the following regular expression to select the lines:
 
