Tweaks from Kindle viewers

--- a/09-dictionaries.tex
+++ b/09-dictionaries.tex
@@ -461,7 +461,7 @@ make a list of the keys in the dictionary using the
 {\tt keys} method available in dictionary objects,
 and then sort that list
 and loop through the sorted list, looking up each
-key printing out key/value pairs in sorted order as follows
+key printing out key/value pairs in sorted order
 as follows:
 
 \beforeverb
