--- a/11-regex.tex
+++ b/11-regex.tex
@@ -173,7 +173,7 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-We read each line and then extract all the substrings that match our regular expression.  Since {\tt findall()} returns a list, we simple check if the number of elements in our returned list is more than zero to print only lines where we found at least one substring that looks like an e-mail address.
+We read each line and then extract all the substrings that match our regular expression.  Since {\tt findall()} returns a list, we simply check if the number of elements in our returned list is more than zero to print only lines where we found at least one substring that looks like an e-mail address.
 
 If we run the program on {\tt mbox.txt} we get the following output:
 
