--- a/00-preface.tex
+++ b/00-preface.tex
@@ -8,26 +8,26 @@
 It is quite natural for academics who are continuously told to 
 ``publish or perish'' to want to always create something from scratch
 that is their own fresh creation.   This book is an 
-experiment in not starting from scratch, but instead ``re-mixing''
+experiment in not starting from scratch, but instead ``remixing''
 the book titled
 \emph{Think Python: How to Think Like
 a Computer Scientist}
-written by Allen B. Downey, Jeff Elkner and others.
+written by Allen B. Downey, Jeff Elkner, and others.
 
 In December of 2009, I was preparing to teach
 {\bf SI502 - Networked Programming} at the University of Michigan
 for the fifth semester in a row and decided it was time
 to write a Python textbook that focused on exploring data
 instead of understanding algorithms and abstractions.
-My goal in SI502 is to teach people life-long data handling 
+My goal in SI502 is to teach people lifelong data handling 
 skills using Python.  Few of my
 students were planning to be professional 
 computer programmers.  Instead, they
-planned be librarians, managers, lawyers, biologists, economists, etc. 
+planned to be librarians, managers, lawyers, biologists, economists, etc., 
 who happened to want to skillfully use technology in their chosen field.
 
 I never seemed to find the perfect data-oriented Python
-book for my course so I set out 
+book for my course, so I set out 
 to write just such a book.  Luckily at a faculty meeting three weeks
 before I was about to start my new book from scratch over 
 the holiday break, 
@@ -41,20 +41,20 @@ has been changed to get to doing data analysis problems as quickly as
 possible and have a series of running examples and exercises 
 about data analysis from the very beginning.  
 
-The chapters 2-10 are similar to the \emph{Think Python} book
+Chapters 2--10 are similar to the \emph{Think Python} book,
 but there have been major changes. Number-oriented examples and
 exercises have been replaced with data-oriented exercises.
 Topics are presented in the order needed to build increasingly
 sophisticated data analysis solutions. Some topics like {\tt try} and
 {\tt except} are pulled forward and presented as part of the chapter
 on conditionals.  Functions are given very light treatment until 
-they are needed to handle program complexity rather introduced 
+they are needed to handle program complexity rather than introduced 
 as an early lesson in abstraction.  Nearly all user-defined functions
-have been removed from the example code and exercises outside Chapter 4.
-The word ``recursion''\footnote{Except of course for this line.}
+have been removed from the example code and exercises outside of Chapter 4.
+The word ``recursion''\footnote{Except, of course, for this line.}
 does not appear in the book at all.
 
-In chapters 1 and 11-16, all of the material is brand new, focusing
+In chapters 1 and 11--16, all of the material is brand new, focusing
 on real-world uses and simple examples of Python for data analysis 
 including regular expressions for searching and parsing, 
 automating tasks on your computer, retrieving data across 
@@ -74,7 +74,7 @@ is a lot of overlap between the two books,
 students will quickly pick up skills in the additional
 areas of technical programming and algorithmic thinking 
 that are covered in \emph{Think Python}.
-And given that the books have a similar writing style, you should be 
+And given that the books have a similar writing style, they should be 
 able to move quickly through \emph{Think Python} with a minimum of effort.
 
 \index{Creative Commons License}
@@ -89,7 +89,7 @@ to the more recent
 Creative Commons Attribution --- Share Alike
 license.
 This follows a general shift in open documentation licenses moving 
-from the GFDL to the CC-BY-SA (i.e. Wikipedia).
+from the GFDL to the CC-BY-SA (e.g., Wikipedia).
 Using the CC-BY-SA license maintains the book's 
 strong copyleft tradition while making it even more straightforward 
 for new authors to reuse this material as they see fit.
@@ -97,8 +97,8 @@ for new authors to reuse this material as they see fit.
 I feel that this book serves an example of why open 
 materials are so important to the future of education,
 and want to thank Allen B. Downey and Cambridge University
-Press for their forward looking decision to make the book available
-under an open Copyright.   I hope they are pleased with the 
+Press for their forward-looking decision to make the book available
+under an open copyright.   I hope they are pleased with the 
 results of my efforts and I hope that you the reader are pleased with
 \emph{our} collective efforts.
 
