--- a/01-intro.tex
+++ b/01-intro.tex
@@ -5,11 +5,11 @@
 
 Writing programs (or programming) is a very creative 
 and rewarding activity.  You can write programs for 
-many reasons ranging from making your living to solving
+many reasons, ranging from making your living to solving
 a difficult data analysis problem to having fun to helping
 someone else solve a problem.  This book assumes that 
-\emph{everyone} needs to know how to program and that once 
-you know how to program, you will figure out what you want 
+\emph{everyone} needs to know how to program, and that once 
+you know how to program you will figure out what you want 
 to do with your newfound skills.  
 
 We are surrounded in our daily lives with computers ranging 
@@ -17,7 +17,7 @@ from laptops to cell phones.  We can think of these computers
 as our ``personal assistants'' who can take care of many things
 on our behalf.  The hardware in our current-day computers 
 is essentially built to continuously ask us the question, 
-``What would you like me to do next?''.
+``What would you like me to do next?''
 
 \beforefig
 \centerline{\includegraphics[height=1.00in]{figs2/pda.eps}}
@@ -26,12 +26,12 @@ is essentially built to continuously ask us the question,
 Programmers add an operating system and a set of applications
 to the hardware and we end up with a Personal Digital
 Assistant that is quite helpful and capable of helping
-many different things.
+us do many different things.
 
 Our computers are fast and have vast amounts of memory and 
 could be very helpful to us if we only knew the language to
 speak to explain to the computer what we would like it to 
-``do next''.  If we knew this language we could tell the 
+``do next''.  If we knew this language, we could tell the 
 computer to do tasks on our behalf that were repetitive.  
 Interestingly, the kinds of things computers can do best
 are often the kinds of things that we humans find boring
@@ -90,10 +90,10 @@ perhaps the following figure is a more sensible version of our PDA:
 \centerline{\includegraphics[height=1.00in]{figs2/pda2.eps}}
 \afterfig
 
-For now, our primary motivation is not to make money or please end-users, but
+For now, our primary motivation is not to make money or please end users, but
 instead for us to be more productive in handling the data and 
 information that we will encounter in our lives.
-When you first start, you will be both the programmer and end-user of
+When you first start, you will be both the programmer and the end user of
 your programs.  As you gain skill as a programmer and
 programming feels more creative to you, your thoughts may turn
 toward developing programs for others.
@@ -118,8 +118,8 @@ The high-level definitions of these parts are as follows:
 \begin{itemize}
 
 \item The {\bf Central Processing Unit} (or CPU) is 
-that part of the computer that is built to be obsessed 
-with ``what is next?''.  If your computer is rated
+the part of the computer that is built to be obsessed 
+with ``what is next?''  If your computer is rated
 at 3.0 Gigahertz, it means that the CPU will ask ``What next?''
 three billion times per second.  You are going to have to 
 learn how to talk fast to keep up with the CPU.
@@ -146,7 +146,7 @@ They are all of the ways we interact with the computer.
 We can think of the network as a very slow place to store and
 retrieve data that might not always be ``up''.  So in a sense,
 the network is a slower and at times unreliable form of
-{\bf Secondary Memory}
+{\bf Secondary Memory}.
 
 \end{itemize}
 
@@ -155,8 +155,8 @@ to computer builders, it helps to have some terminology
 so we can talk about these different parts as we write our programs.
 
 As a programmer, your job is to use and orchestrate 
-each of these resources to solve the problem that you need solving
-and analyze the data you need.  As a programmer you will 
+each of these resources to solve the problem that you need to solve
+and analyze the data you get from the solution.  As a programmer you will 
 mostly be ``talking'' to the CPU and telling it what to 
 do next.  Sometimes you will tell the CPU to use the main memory,
 secondary memory, network, or the input/output devices.
@@ -178,7 +178,7 @@ be correct {\bf programming}.
 
 In the rest of this book, we will try to turn you into a person
 who is skilled in the art of programming.  In the end you will be a 
-{\bf programmer} --- perhaps not a professional programmer but 
+{\bf programmer} --- perhaps not a professional programmer, but 
 at least you will have the skills to look at a data/information
 analysis problem and develop a program to solve the problem.
 
@@ -188,14 +188,14 @@ In a sense, you need two skills to be a programmer:
 
 \begin{itemize}
 
-\item First you need to know the programming language (Python) -
+\item First, you need to know the programming language (Python) -
 you need to know the vocabulary and the grammar.  You need to be able 
-to spell the words in this new language properly and how to construct 
-well-formed ``sentences'' in this new languages.
+to spell the words in this new language properly and know how to construct 
+well-formed ``sentences'' in this new language.
 
-\item Second you need to ``tell a story''.  In writing a story,
+\item Second, you need to ``tell a story''.  In writing a story,
 you combine words and sentences to convey an idea to the reader. 
-There is a skill and art in constructing the story and skill in
+There is a skill and art in constructing the story, and skill in
 story writing is improved by doing some writing and getting some
 feedback.  In programming, our program is the ``story'' and the 
 problem you are trying to solve is the ``idea''.
@@ -205,14 +205,14 @@ problem you are trying to solve is the ``idea''.
 Once you learn one programming language such as Python, you will 
 find it much easier to learn a second programming language such
 as JavaScript or C++.  The new programming language has very different 
-vocabulary and grammar but once you learn problem solving skills, 
-they will be the same across all programming languages.
+vocabulary and grammar but the problem-solving skills 
+will be the same across all programming languages.
 
 You will learn the ``vocabulary'' and ``sentences'' of Python pretty quickly.
 It will take longer for you to be able to write a coherent program
-to solve a brand new problem.  We teach programming much like we teach
-writing.  We start reading and explaining programs and then we write 
-simple programs and then write increasingly complex programs over time.
+to solve a brand-new problem.  We teach programming much like we teach
+writing.  We start reading and explaining programs, then we write 
+simple programs, and then we write increasingly complex programs over time.
 At some point you ``get your muse'' and see the patterns on your own
 and can see more naturally how to take a problem and 
 write a program that solves that problem.  And once you get 
@@ -230,17 +230,17 @@ Unlike human languages, the Python vocabulary is actually pretty small.
 We call this ``vocabulary'' the ``reserved words''.  These are words that
 have very special meaning to Python.  When Python sees these words in 
 a Python program, they have one and only one meaning to Python.  Later
-as you write programs you will make your own words that have meaning to 
+as you write programs you will make up your own words that have meaning to 
 you called {\bf variables}.   You will have great latitude in choosing
 your names for your variables, but you cannot use any of Python's 
 reserved words as a name for a variable.
 
-In a sense, when we train a dog, we would use special words like,
-``sit'', ``stay'', and ``fetch''.  Also when you talk to a dog and
+When we train a dog, we use special words like
+``sit'', ``stay'', and ``fetch''.  When you talk to a dog and
 don't use any of the reserved words, they just look at you with a 
-quizzical look on their faces until you say a reserved word.  
+quizzical look on their face until you say a reserved word.  
 For example, if you say, 
-``I wish more people would walk to improve their overall health.'', 
+``I wish more people would walk to improve their overall health'', 
 what most dogs likely hear is,
 ``blah blah blah {\bf walk} blah blah blah blah.''
 That is because ``walk'' is a reserved word in dog language.  Many
@@ -248,7 +248,7 @@ might suggest that the language between humans and cats has no
 reserved words\footnote{\url{http://xkcd.com/231/}}.
 
 The reserved words in the language where humans talk to 
-Python includes the following:
+Python include the following:
 
 \beforeverb
 \begin{verbatim}
@@ -268,7 +268,7 @@ fail.
 
 We will learn these reserved words and how they are used in good time,
 but for now we will focus on the Python equivalent of ``speak'' (in 
-human to dog language).  The nice thing about telling Python to speak
+human-to-dog language).  The nice thing about telling Python to speak
 is that we can even tell it what to say by giving it a message in quotes:
 
 \beforeverb
@@ -308,13 +308,12 @@ Type "help", "copyright", "credits" or "license" for more information.
 \afterverb
 %
 The {\tt >>>} prompt is the Python interpreter's way of asking you, ``What
-do you want me to do next?''.  Python is ready to have a conversation with
-you.  All you have to know is how to speak the Python language and you 
-can have a conversation.
+do you want me to do next?''  Python is ready to have a conversation with
+you.  All you have to know is how to speak the Python language.
 
-Lets say for example that you did not know even the simplest Python language
+Let's say for example that you did not know even the simplest Python language
 words or sentences. You might want to use the standard line that astronauts 
-use when they land on a far away planet and try to speak with the inhabitants
+use when they land on a faraway planet and try to speak with the inhabitants
 of the planet:
 
 \beforeverb
@@ -332,7 +331,7 @@ This is not going so well.  Unless you think of something quickly,
 the inhabitants of the planet are likely to stab you with their spears, 
 put you on a spit, roast you over a fire, and eat you for dinner.
 
-Luckily you brought a copy of this book on your travels and you thumb to
+Luckily you brought a copy of this book on your travels, and you thumb to
 this very page and try again:
 
 \beforeverb
@@ -342,7 +341,7 @@ Hello world!
 \end{verbatim}
 \afterverb
 %
-This is looking much better so you try to communicate some
+This is looking much better, so you try to communicate some
 more:
 
 \beforeverb
@@ -369,10 +368,10 @@ brought the spears back out.
 At this point, you should also realize that while Python 
 is amazingly complex and powerful and very picky about 
 the syntax you use to communicate with it, Python is {\em 
-not} intelligent.  You are having a conversation with 
-yourself but using proper syntax.
+not} intelligent.  You are really just having a conversation
+with yourself, but using proper syntax.
 
-In a sense when you use a program written by someone else
+In a sense, when you use a program written by someone else
 the conversation is between you and those other
 programmers with Python acting as an intermediary.  Python
 is a way for the creators of programs to express how the 
@@ -411,19 +410,19 @@ of the sentence wrong.
 The proper way to say ``good-bye'' to Python is to enter 
 {\bf quit()} at the interactive chevron {\tt >>>} prompt.
 It would have probably taken you quite a while to guess that 
-one so having a book handy probably will turn out 
+one, so having a book handy probably will turn out 
 to be helpful.
 
 \section{Terminology: interpreter and compiler}
 
 Python is a {\bf high-level} language intended to be relatively
 straightforward for humans to read and write and for computers
-to read and process.  Other high-level languages include: Java, C++,
+to read and process.  Other high-level languages include Java, C++,
 PHP, Ruby, Basic, Perl, JavaScript, and many more.  The actual hardware
 inside the Central Processing Unit (CPU) does not understand any
-of these high level languages.
+of these high-level languages.
 
-The CPU understands a language we call {\bf machine-language}.  Machine
+The CPU understands a language we call {\bf machine language}.  Machine
 language is very simple and frankly very tiresome to write because it 
 is represented all in zeros and ones:
 
@@ -435,25 +434,25 @@ is represented all in zeros and ones:
 \end{verbatim}
 \afterverb
 %
-Machine language seems quite simple on the surface given that there 
+Machine language seems quite simple on the surface, given that there 
 are only zeros and ones, but its syntax is even more complex
 and far more intricate than Python.  So very few programmers ever write
 machine language.  Instead we build various translators to allow
-programmers to write in high level languages like Python or JavaScript
+programmers to write in high-level languages like Python or JavaScript
 and these translators convert the programs to machine language for actual
 execution by the CPU.
 
 Since machine language is tied to the computer hardware, machine language
 is not {\bf portable} across different types of hardware.  Programs written in 
 high-level languages can be moved between different computers by using a 
-different interpreter on the new machine or re-compiling the code to create
+different interpreter on the new machine or recompiling the code to create
 a machine language version of the program for the new machine.
 
 These programming language translators fall into two general categories:
 (1) interpreters and (2) compilers.
 
 An {\bf interpreter} reads the source code of the program as written by the
-programmer, parses the source code, and interprets the instructions on-the-fly.
+programmer, parses the source code, and interprets the instructions on the fly.
 Python is an interpreter and when we are running Python interactively, 
 we can type a line of Python (a sentence) and Python processes it immediately
 and is ready for us to type another line of Python.   
@@ -478,7 +477,7 @@ term {\bf variable} to refer to the labels we use to refer to this stored data.
 In this example, we ask Python to remember the value six and use the label {\bf x}
 so we can retrieve the value later.   We verify that Python has actually remembered
 the value using {\bf print}. Then we ask Python to retrieve {\bf x} and multiply
-it by seven and put the newly-computed value in {\bf y}.  Then we ask Python to print out
+it by seven and put the newly computed value in {\bf y}.  Then we ask Python to print out
 the value currently in {\bf y}.
 
 Even though we are typing these commands into Python one line at a time, Python
@@ -488,13 +487,13 @@ simple paragraph with four sentences in a logical and meaningful order.
 
 It is the nature of an {\bf interpreter} to be able to have an interactive conversation
 as shown above.  A {\bf compiler} needs to be handed the entire program in a file, and then 
-it runs a process to translate the high level source code into machine language
+it runs a process to translate the high-level source code into machine language
 and then the compiler puts the resulting machine language into a file for later
 execution.
 
 If you have a Windows system, often these executable machine language programs have a
-suffix of ``.exe'' or ``.dll'' which stand for ``executable'' and ``dynamically loadable
-library'' respectively.  In Linux and Macintosh there is no suffix that uniquely marks
+suffix of ``.exe'' or ``.dll'' which stand for ``executable'' and ``dynamic link
+library'' respectively.  In Linux and Macintosh, there is no suffix that uniquely marks
 a file as executable.
 
 If you were to open an executable file in a text editor, it would look 
@@ -511,22 +510,22 @@ completely crazy and be unreadable:
 \end{verbatim}
 \afterverb
 %
-It is not easy to read or write machine language so it is nice that we have
-{\bf interpreters} and {\bf compilers} that allow us to write in a high-level
-language like Python or C.
+It is not easy to read or write machine language, so it is nice that we have
+{\bf interpreters} and {\bf compilers} that allow us to write in high-level
+languages like Python or C.
 
 Now at this point in our discussion of compilers and interpreters, you should 
 be wondering a bit about the Python interpreter itself.  What language is 
 it written in?  Is it written in a compiled language?  When we type
 ``python'', what exactly is happening?
 
-The Python interpreter is written in a high level language called ``C''.  
+The Python interpreter is written in a high-level language called ``C''.  
 You can look at the actual source code for the Python interpreter by
 going to \url{www.python.org} and working your way to their source code.
-So Python is a program itself and it is compiled into machine code and
-when you installed Python on your computer (or the vendor installed it),
+So Python is a program itself and it is compiled into machine code.
+When you installed Python on your computer (or the vendor installed it),
 you copied a machine-code copy of the translated Python program onto your
-system.   In Windows the executable machine code for Python itself is likely
+system.   In Windows, the executable machine code for Python itself is likely
 in a file with a name like:
 
 \beforeverb
@@ -566,7 +565,7 @@ csev$
 \afterverb
 %
 The ``csev\$'' is the operating system prompt, and the ``cat hello.py'' is 
-showing us that the file ``hello.py'' has a one line Python program to print
+showing us that the file ``hello.py'' has a one-line Python program to print
 a string.
 
 We call the Python interpreter and tell it to read its source code from
@@ -591,13 +590,13 @@ that would solve that problem.
 
 Lets say you are doing Social Computing research on Facebook posts and 
 you are interested in the most frequently used word in a series of posts.
-You could print out the stream of facebook posts and pore over the text
+You could print out the stream of Facebook posts and pore over the text
 looking for the most common word, but that would take a long time and be very 
 mistake prone.  You would be smart to write a Python program to handle the
 task quickly and accurately so you can spend the weekend doing something 
 fun.
 
-For example look at the following text about a clown and a car.  Look at the 
+For example, look at the following text about a clown and a car.  Look at the 
 text and figure out the most common word and how many times it occurs.
 
 \beforeverb
@@ -648,8 +647,8 @@ code from \url{http://www.pythonlearn.com/code/} and run it.
 
 \index{program}
 This is a good example of how Python and the Python language are acting as an intermediary
-between you (the end-user) and me (the programmer).  Python is a way for us to exchange useful
-instruction sequences (i.e. programs) in a common language that can be used by anyone who 
+between you (the end user) and me (the programmer).  Python is a way for us to exchange useful
+instruction sequences (i.e., programs) in a common language that can be used by anyone who 
 installs Python on their computer.  So neither of us are talking {\em to Python},
 instead we are communicating with each other {\em through} Python.
 
@@ -679,7 +678,7 @@ speaker to play music or speak text.
 another in the order they are encountered in the script.
 
 \item[conditional execution:] Check for certain conditions and
-execute or skip a sequence of statements.
+then execute or skip a sequence of statements.
 
 \item[repeated execution:] Perform some set of statements 
 repeatedly, usually with
@@ -690,7 +689,7 @@ and then reuse those instructions as needed throughout your program.
 
 \end{description}
 
-It sounds almost too simple to be true and of course it is never
+It sounds almost too simple to be true, and of course it is never
 so simple.  It is like saying that walking is simply
 ``putting one foot in front of the other''.  The ``art'' 
 of writing a program is composing and weaving these
@@ -708,7 +707,7 @@ deviation or mistake will cause Python to give up looking at your
 program.
 
 Beginning programmers often take the fact that Python leaves no
-room for errors as evidence that Python is mean, hateful and cruel.
+room for errors as evidence that Python is mean, hateful, and cruel.
 While Python seems to like everyone else, Python knows them 
 personally and holds a grudge against them.  Because of this grudge,
 Python takes our perfectly written programs and rejects them as 
@@ -740,15 +739,15 @@ SyntaxError: invalid syntax
 \end{verbatim}
 \afterverb
 %
-There is little to be gained by arguing with Python.  It is a tool,
-it has no emotion and it is happy and ready to serve you whenever you
+There is little to be gained by arguing with Python.  It is just a tool.
+It has no emotions and it is happy and ready to serve you whenever you
 need it.  Its error messages sound harsh, but they are just Python's
 call for help.  It has looked at what you typed, and it simply cannot
 understand what you have entered.
 
 Python is much more like a dog, loving you unconditionally, having a few
 key words that it understands, looking you with a sweet look on its
-face ({\tt >>>}) and waiting for you to say something it understands.
+face ({\tt >>>}), and waiting for you to say something it understands.
 When Python says ``SyntaxError: invalid syntax'', it is simply wagging
 its tail and saying, ``You seemed to say something but I just don't
 understand what you meant, but please keep talking to me ({\tt >>>}).''
@@ -775,13 +774,13 @@ in your backpack, walk to the library, and then put the top back on the bottle.'
 is syntactically perfect and in the right order, but there is simply a mistake in 
 the program.  The program is perfectly correct but it does not do what
 you {\em intended} for it to do. A simple example would
-be if you were giving a person directions to a restaurant and said, ``... when you reach
+be if you were giving a person directions to a restaurant and said, ``...when you reach
 the intersection with the gas station, turn left and go one mile and the restaurant
-is a red building on your left.''.  Your friend is very late and calls you to tell you that
+is a red building on your left.''  Your friend is very late and calls you to tell you that
 they are on a farm and walking around behind a barn, with no sign of a restaurant.  
 Then you say ``did you turn left or right at the gas station?'' and 
 they say, ``I followed your directions perfectly, I have 
-them written down, it says turn left and go one mile at the gas station.''.  Then you say,
+them written down, it says turn left and go one mile at the gas station.''  Then you say,
 ``I am very sorry, because while my instructions were syntactically correct, they 
 sadly contained a small but undetected semantic error.''. 
 
@@ -805,17 +804,17 @@ But it is like learning a new language that takes time to absorb and understand
 before it feels natural.
 That leads to some confusion as we visit and revisit
 topics to try to get you to see the big picture while we are defining the tiny
-fragments that make up the big picture.  While the book is written linearly and
-if you are taking a course, it will progress in a linear fashion, don't hesitate
-to be very non-linear in how you approach the material.  Look forwards and backwards
+fragments that make up that big picture.  While the book is written linearly, and
+if you are taking a course it will progress in a linear fashion, don't hesitate
+to be very nonlinear in how you approach the material.  Look forwards and backwards
 and read with a light touch.  By skimming more advanced material without 
 fully understanding the details, you can get a better understanding of the ``why?'' 
-of programming.  By reviewing previous material and even re-doing earlier 
+of programming.  By reviewing previous material and even redoing earlier 
 exercises, you will realize that you actually learned a lot of material even 
 if the material you are currently staring at seems a bit impenetrable.
 
 Usually when you are learning your first programming language, there are a few
-wonderful ``Ah-Hah!'' moments where you can look up from pounding away at some rock
+wonderful ``Ah Hah!'' moments where you can look up from pounding away at some rock
 with a hammer and chisel and step away and see that you are indeed building 
 a beautiful sculpture.
 
@@ -857,10 +856,10 @@ by translating it one line at a time.
 
 \item[low-level language:]  A programming language that is designed
 to be easy for a computer to execute; also called ``machine code'' or
-``assembly language.''
+``assembly language''.
 \index{low-level language}
 
-\item[machine code:]  The lowest level language for software which 
+\item[machine code:]  The lowest-level language for software, which 
 is the language that is directly executed by the central processing unit 
 (CPU).
 \index{machine code}
@@ -918,7 +917,7 @@ What is the function of the secondary memory in a computer?
 
 a) Execute all of the computation and logic of the program\\
 b) Retrieve web pages over the Internet\\
-c) Store information for the long term - even beyond a power cycle\\
+c) Store information for the long term -- even beyond a power cycle\\
 d) Take input from the user 
 \end{ex}
 
@@ -931,7 +930,7 @@ What is the difference between a compiler and an interpreter?
 \end{ex}
 
 \begin{ex}
-Which of the following contains "machine code"?
+Which of the following contains ``machine code''?
 
 a) The Python interpreter\\
 b) The keyboard\\
@@ -956,7 +955,7 @@ SyntaxError: invalid syntax
 \end{ex}
 
 \begin{ex}
-Where in the computer is a variable such as "X" stored 
+Where in the computer is a variable such as ``X'' stored 
 after the following Python line finishes?
 
 \beforeverb
@@ -994,10 +993,10 @@ Explain each of the following using an example of a human capability:
 (1) Central processing unit, (2) Main Memory, (3) Secondary Memory, 
 (4) Input Device, and
 (5) Output Device.
-For example, "What is the human equivalent to a Central Processing Unit"? 
+For example, ``What is the human equivalent to a Central Processing Unit''? 
 \end{ex}
 
 \begin{ex}
-How do you fix a "Syntax Error"?
+How do you fix a ``Syntax Error''?
 \end{ex}
 
