--- a/02-variables.tex
+++ b/02-variables.tex
@@ -305,8 +305,8 @@ When both of the operands are integers, the result is also an
 integer; floor division chops off the fractional
 part, so in this example it truncates the answer to zero.
 
-If either of the operands is a floating point number, Python performs
-floating point division, and the result is a {\tt float}:
+If either of the operands is a floating-point number, Python performs
+floating-point division, and the result is a {\tt float}:
 
 \beforeverb
 \begin{verbatim}
@@ -840,7 +840,7 @@ far, the statements we have seen are assignments and print statements.
 \index{string}
 
 \item[type:] A category of values.  The types we have seen so far
-are integers (type {\tt int}), floating point numbers (type {\tt
+are integers (type {\tt int}), floating-point numbers (type {\tt
 float}), and strings (type {\tt str}).
 \index{type}
 
